Add draw.js; Change getMousePos to work properly in canvas; Add functions to create colored sticky notes on the canvas

--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   },
   "dependencies": {
     "express": "^4.15.2",
-    "socket.io": "^1.4.8",
+    "socket.io": "^1.7.3",
     "xxhashjs": "^0.2.1"
   },
-  "author": "Therese Henriksson",
+  "author": "Therese Henriksson & Veronica Lesnar",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/thereseh/Websockets-App3/issues"
   },
   "homepage": "https://github.com/thereseh/Websockets-App3#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-env": "^1.1.8",
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
