--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "express": "^4.15.2",
+    "mongoose": "^4.9.8",
     "socket.io": "^1.7.3",
     "xxhashjs": "^0.2.1"
   },
